# gmic-py

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build_tools.bash  get_version.py  gmicpy.cpp  pyproject.toml  requirements-tests.txt  requirements.txt  setup.py  test.py  version_build.py
.github/workflows/: main.yml
pysrc/gmic/: __init__.py
src/: gmic_image_py.cpp  gmic_list_py.cpp  gmicpy.cpp  gmicpy.h  gmicpy.hpp  logging.h  logging.hpp  nb_ndarray_buffer.cpp  nb_ndarray_buffer.hpp  translate_args.h  utils.hpp
tests/: .gitignore  conftest.py  requirements.txt  test_gmic.py  test_gmic_py.py  test_gmicimage.py  test_gmicimage_yxc.py
